apps/bin-checker-service/infra/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bin-checker-service
  labels:
    istio-injection: enabled
