apps/bin-checker-service/infra/kubernetes/05-requestauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: bin-checker-service-jwt
  namespace: bin-checker-service
spec:
  selector:
    matchLabels:
      app: bin-checker-service
  jwtRules:
    - issuer: "http://keycloak.k8s.orb.local/realms/master"
      jwksUri: "http://keycloak-svc.keycloak.svc.cluster.local/realms/master/protocol/openid-connect/certs"
      forwardOriginalToken: true
