apps/bin-checker-service/infra/kubernetes/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: bin-checker-service
  namespace: bin-checker-service
spec:
  mtls:
    mode: STRICT
