apps/bin-checker-service/infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bin-checker-service
  namespace: bin-checker-service
spec:
  selector:
    app: bin-checker-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
