apps/bin-checker-service/infra/kubernetes/04-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bin-checker-service-vs
  namespace: bin-checker-service
spec:
  hosts:
    - bin-checker-service.k8s.orb.local
  gateways:
    - istio-system/istio-gateway
  http:
    - route:
        - destination:
            host: bin-checker-service-svc.bin-checker-service.svc.cluster.local
            port:
              number: 80
